src/tests/snapshots/cclv__tests__view_snapshots__bug_tab_x_offset_after_click.snap
---
source: src/tests/view_snapshots.rs
expression: after_click_output.clone()
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main │ tab2                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌tab2 [Haiku] (1 entries)──────────────────────────────────────────────────────┐
││  1 Sub1                                                                     │
│── ↓2/2 ↑1/1 / $0.00 | Context: 3 (0%) ──                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
