src/tests/snapshots/cclv__tests__view_snapshots__focused_entry_cyan_indicator.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Main (2 entries)──────────────────────────────────────────────────────────────┐
││  1 First message                                                            │
│                                                                              │
││  2 Second message                                                           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
