src/tests/snapshots/cclv__tests__view_snapshots__focused_entry_middle_of_three.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Main (3 entries)──────────────────────────────────────────────────────────────┐
││  1 First message                                                            │
│                                                                              │
││  2 Second message (focused)                                                 │
│                                                                              │
││  3 Third message                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
