src/tests/snapshots/cclv__tests__view_snapshots__message_expanded_multiline.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries)────────────────────────────────────┐
││  1 Line 1                                               │
││    Line 2                                               │
││    Line 3                                               │
││    Line 4                                               │
││    Line 5                                               │
││    Line 6                                               │
││    Line 7                                               │
││    Line 8                                               │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
