src/tests/snapshots/cclv__tests__view_snapshots__message_with_code_block.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Main (1 entries)────────────────────────────────────────────────────┐
││  1 Here's some code:                                              │
││                                                                   │
││    fn main() {                                                    │
││        println!("Hello, world!");                                 │
││    }                                                              │
││                                                                   │
││    That's the code.                                               │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
