src/tests/snapshots/cclv__tests__view_snapshots__message_with_tool_result.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries)────────────────────────────────────────────────────────┐
││  1 File contents:                                                           │
││    fn main() {                                                              │
││        println!("Hello, world!");                                           │
││    }                                                                        │
││                                                                             │
││    Total lines: 3                                                           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
